--- a/text.html
+++ b/text.html
@@ -7,19 +7,20 @@
     <title>Quote</title>
 
     <style>
+        @import url('https://fonts.googleapis.com/css2?family=Source+Code+Pro&display=swap');
         .widget {
             padding: 5px 5px ;
             color: #000000;
             text-align: center;
-                max-width: 95%;
+            max-width: 95%;
             margin: auto;
-            font-variant-caps: petite-caps;
-            font-size: 2em;
+            font-size: 1em;
+            font-family: 'Source Code Pro', monospace;
         }
         div {
-             width: 95%;
-             min-height: 100px;
-            background-color: #555;
+            width: 95%;
+            min-height: 80px;
+            background-color: #F8ECAB;
             }
     </style>
 </head>
