--- a/text.html
+++ b/text.html
@@ -10,7 +10,7 @@
         @import url('https://fonts.googleapis.com/css2?family=Source+Code+Pro&display=swap');
         .widget {
             padding: 5px 5px ;
-            color: #000000;
+            color: #3A3B39;
             text-align: center;
             max-width: 95%;
             margin: auto;
