--- a/text.html
+++ b/text.html
@@ -12,21 +12,20 @@
             padding: 5px 5px ;
             color: #3A3B39;
             text-align: center;
-            max-width: 95%;
+            max-width: 100%;
             margin: auto;
             font-size: 1em;
             font-family: 'Source Code Pro', monospace;
         }
         div {
-            width: 95%;
-            min-height: 80px;
+            min-height: 50px;
             background-color: #F8ECAB;
             }
     </style>
 </head>
 <body>
 
-    <div class="widget" id="widget"> You've got no reason to be afraid </div>
+    <div class="widget" id="widget"> 🌻 You've got <br> no reason to be afraid </div>
 
 </body>
 </html>
