--- a/text.html
+++ b/text.html
@@ -25,7 +25,7 @@
 </head>
 <body>
 
-    <div class="widget" id="widget"> 🌻 You've got <br> no reason to be afraid </div>
+    <div class="widget" id="widget"> 🌻 You've got <br/> no reason to be afraid </div>
 
 </body>
 </html>
