--- a/Calculator-green.html
+++ b/Calculator-green.html
@@ -39,7 +39,7 @@ body {
     background: white;
     margin: 1% 0;
     color: black;
-    border: 3px solid #000000;
+    border: 2px solid #3A3B39;
     border-radius: 5px;
     box-shadow: 2px 2px 1px 0px #000000;
     max-width: 240px;
@@ -54,10 +54,10 @@ body {
     min-height: 2em;
     margin: 0.8%;
     border-radius: 15%;
-    border: 0.08em solid #000;
+    border: 0.08em solid #BCDCD1;
     font-family: monospace;
     background: white;
-    box-shadow: 0.03em  0.03em 0.01em 0px #000000;
+    //box-shadow: 0.03em  0.03em 0.01em 0px #000000;
 
 
 }
