--- a/Calculator-green.html
+++ b/Calculator-green.html
@@ -48,18 +48,15 @@ body {
 }
 
 .calculator .button {
-  
     font-size: x-large;
     width: 2em;
     min-height: 2em;
     margin: 0.8%;
     border-radius: 15%;
-    border: 0.08em solid #BCDCD1;
+    border: 0.08em solid #89957d;
     font-family: monospace;
     background: white;
-    //box-shadow: 0.03em  0.03em 0.01em 0px #000000;
-
-
+    color: #3A3B39;
 }
 
 .calculator .accent{
@@ -67,7 +64,6 @@ body {
 }
 
 .calculator .space {
-  
     font-size: x-large;
     width: 2.4em;
     min-height: 2.4em;
@@ -75,8 +71,6 @@ body {
     border-radius: 15%;
     border: 0.08em solid #ffffff;
     background: white;
-
-
 }
 
 
@@ -86,12 +80,11 @@ body {
   color:#000000;
   transform: scale(0.9);
   border-radius: 20%;
-
 }
 
 .calculator 
 #clear:hover , #rad:hover  ,#deg:hover{
-  background: #3A3B39!important;
+  background: #89957d;
   color:#ffffff;
   transform: scale(0.9);
   border-radius: 20%;
@@ -112,7 +105,7 @@ body {
 
  #screen{
 
-    border: 3px solid #000000;
+    border: 3px solid #89957d;
     border-radius: 5px;
     width: 80%;
     height: 50px;
@@ -122,22 +115,22 @@ body {
     overflow-wrap: break-word;
     font-size: 30px;
     font-family: monospace;
-    background-color: #000;
+    background-color: #89957d;
     color: #fff;
 
 }
 
     
 #clean {
-  background: rgb(27, 27, 27);
+  background: #89957d;
   color:#ffffff;
 }
 #rad {
-  background: rgb(27, 27, 27);
+  background: #89957d;
   color:#ffffff;
 }
 #deg {
-  background: rgb(27, 27, 27);
+  background: #89957d;
   color:#ffffff;
 }
 
