--- a/Calculator-green.html
+++ b/Calculator-green.html
@@ -6,25 +6,15 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>calculator</title>
     <link href="https://fonts.googleapis.com/css2?family=Dosis:wght@500&family=MuseoModerno:wght@300;400&display=swap" rel="stylesheet">
-
-
     <style>
-
 body {
   margin: 0 auto;
   text-align: center;
   font-size: 23px;
-
-
 }
-
 .main {
   max-width: 10%;
 }
-
-
-
-
 .button > .over {
   text-decoration:overline;
   display: inline-block;
@@ -32,21 +22,15 @@ body {
   top: 3px;
   left: -4px;
 }
-
 .calculator {
-  
     display: inline-block;
     background: white;
     margin: 1% 0;
     color: black;
-    border: 2px solid #3A3B39;
+    border: 2px solid #c0c0c0;
     border-radius: 5px;
-    box-shadow: 2px 2px 1px 0px #000000;
     max-width: 240px;
-
-  
 }
-
 .calculator .button {
     font-size: x-large;
     width: 2em;
@@ -58,11 +42,9 @@ body {
     background: white;
     color: #3A3B39;
 }
-
 .calculator .accent{
    background: #EDF3EC;  background: #EDF3EC;;
 }
-
 .calculator .space {
     font-size: x-large;
     width: 2.4em;
@@ -72,8 +54,6 @@ body {
     border: 0.08em solid #ffffff;
     background: white;
 }
-
-
 .calculator button:hover,
 #backspace:hover {
   background: #EDF3EC;
@@ -81,7 +61,6 @@ body {
   transform: scale(0.9);
   border-radius: 20%;
 }
-
 .calculator 
 #clear:hover , #rad:hover  ,#deg:hover{
   background: #89957d;
@@ -89,22 +68,18 @@ body {
   transform: scale(0.9);
   border-radius: 20%;
 }
-
 .calculator button:focus,
 #clear:focus,
 #backspace:focus {
   outline: none;
 }
-
 .button:active,
 .button-active {
   background: #3A3B39;
   color:#ffffff;
   transform: scale(0.8);
 }
-
  #screen{
-
     border: 3px solid #89957d;
     border-radius: 5px;
     width: 80%;
@@ -117,11 +92,9 @@ body {
     font-family: monospace;
     background-color: #89957d;
     color: #fff;
-
 }
-
-    
 #clean {
+  min-width: 2em;
   background: #89957d;
   color:#ffffff;
 }
@@ -133,7 +106,6 @@ body {
   background: #89957d;
   color:#ffffff;
 }
-
 .rows{
     margin: 5%;
 }
