--- a/index.html
+++ b/index.html
@@ -1,1 +1,18 @@
-"I've got so much love <3"
+<!DOCTYPE html>
+<html lang="en">
+<head>
+    <meta charset="UTF-8">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <title>calculator</title>
+    <style>
+body {
+}
+    </style>
+</head>
+<body>
+<p>"I've got so much love <3"</p>	
+</body>
+<script>
+</script>
+</html>
+
