--- a/Countdown.html
+++ b/Countdown.html
@@ -1,7 +1,6 @@
-
-<!DOCTYPE html>
-<html lang="en">
-<head>
+  <!DOCTYPE html>
+  <html lang="en">
+  <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>New year CountDown</title>
@@ -24,11 +23,22 @@
         justify-content: center;
         text-align: center;
       }
-
-    #compact{
-      text-transform: none;
-      font-size: .7em;
-    }
+      #text {
+        text-transform: uppercase;
+        font-size: .7em;
+        letter-spacing: 5px;
+        align-items: center;
+        justify-content: center;
+        text-align: center;
+        font-weight: bold;
+      }
+      #text p {
+        margin: 1em 0 0;
+      }
+      #compact{
+        text-transform: none;
+        font-size: .7em;
+      }
 
       .years,
       .months,
@@ -37,7 +47,7 @@
       .hours,
       .minutes,
       .seconds {
-        padding: 20px 10px;
+        padding: 0px 10px 20px;
       }
 
       #years {
@@ -104,6 +114,7 @@
   </head>
 
   <body>
+    <div id="text"><p> New year </p></div>
     <div id="timer">
         <div class="days">
           <div id="days" class="numbers"></div>
@@ -156,5 +167,5 @@
           document.getElementById("seconds").innerHTML = seconds;
       }
     }, 1000);
-</script>
-</html>
+  </script>
+  </html>
