--- a/Calendar.html
+++ b/Calendar.html
@@ -18,7 +18,7 @@
    padding: 0 10px;
    justify-content: center;
    min-height: 100vh;
-   background: #ACC8A7;
+   background: #DBE7D9;
    }
    .wrapper{
    width: 370px;
